Fix skills layout issue

--- a/style.css
+++ b/style.css
@@ -259,7 +259,7 @@ p {
     flex-wrap: wrap;
     width: 100%;
     height: auto;
-    max-width: 60rem;
+    max-width: 62rem;
     max-height: auto;
     margin: auto;
     /* align-items: center; */
@@ -268,36 +268,33 @@ p {
 
 #about-photo {
     width: 17rem;
-    height: auto;
+    height: 17rem;
     border-radius: 25%;
     box-shadow: 0 0.1rem 0.5rem rgba(0, 0, 0, 0.5);
 }
 
 #about-blurb {
-    width: 40rem;
+    width: 45rem;
     height: auto;
     padding: 0 2rem;
     text-align: left;
 }
 
 #about-info {
-    width: 18rem;
-    height: auto;
-    padding: 0.1rem 0 0 0;
+    padding: 1rem 0 0 0;
     text-align: left;
 }
 
 #about-skills {
+    flex: 1;
     width: auto;
     height: 100%;
-    padding: 0 2rem;
+    padding: 0 3rem;
 }
 
 #about-skills div {
     display: flex;
     flex-wrap: wrap;
-    max-width: 35rem;
-    max-height: auto;
     align-items: center;
     justify-content: center;
 }
@@ -306,7 +303,7 @@ p {
     width: auto;
     height: 4.5rem;
     padding: 0.5rem;
-    margin: 0 0.5rem 0 0.5rem;
+    margin: 0 0.5rem;
     border-radius: 15%;
     background-color: rgba(0, 0, 0, 0.1);
 }
